# QaryxOS

./: .gitignore  ARCHITECTURE_QA.md  README.md
android/: gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/qaryxos/companion/: MainActivity.kt
android/app/src/main/kotlin/com/qaryxos/companion/data/api/: ApiClient.kt  QaryxApi.kt
android/app/src/main/kotlin/com/qaryxos/companion/data/models/: Models.kt
android/app/src/main/kotlin/com/qaryxos/companion/data/ws/: WsClient.kt
android/app/src/main/kotlin/com/qaryxos/companion/discovery/: DeviceDiscovery.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/gradle/: libs.versions.toml
api/: main.py  requirements.txt
api/routers/: iptv.py  ota.py  playback.py  system.py  ui.py  youtube.py
api/services/: config.py  history.py  iptv.py  mpv.py  youtube.py  ytdlp.py
api/static/: index.html
core/: CMakeLists.txt
core/src/: config.c  config.h  drm.c  drm.h  egl.c  egl.h  font.c  font.h  history.c  history.h  http_dl.c  http_dl.h  input.c  input.h  iptv.c  iptv.h  main.c  mpv.c  mpv.h  render.c  render.h  services.c  services.h  thumbcache.c  thumbcache.h  ws.c  ws.h  ytdlp.c  ytdlp.h
core/src/ui/: home.c  home.h  iptv.c  iptv.h  youtube.c  youtube.h
docs/: ARCHITECTURE.md  INSTALL.md
mediashell/: main.py
mediashell/screens/: __init__.py  home.py  iptv.py  url_input.py  youtube.py
os/overlay/etc/avahi/services/: qaryxos.service
os/overlay/etc/mpv/: mpv.conf
os/overlay/etc/systemd/system/: qaryxos-api.service  qaryxos-cpu-governor.service  qaryxos-mediashell.service  qaryxos-mpv.service  qaryxos-update.service  qaryxos-update.timer  qaryxos-youtube-refresh.service  qaryxos-youtube-refresh.timer  qaryxos-ytdlp-daemon.service  qaryxos-zram.service  qaryxos.service
os/scripts/: install.sh  optimize-boot.sh  setup-launcher.sh  yt-dlp-daemon.py
ota/: updater.py
(+7 files in other folders)
